--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,3 +20,18 @@ jobs:
 
       - name: Run Jest tests
         run: npm test
+  docker: 
+    needs: build 
+    runs-on: ubuntu-latest 
+    steps: 
+      - name: Checkout code 
+        uses: actions/checkout@v3 
+      - name: Log in to Docker Hub 
+        uses: docker/login-action@v3 
+        with: 
+          username: ${{ secrets.DOCKER_USERNAME }} 
+          password: ${{ secrets.DOCKER_PASSWORD }} 
+      - name: Build and push Docker image 
+        run: | 
+          docker build -t glarimy/glarimy-converter:latest . 
+          docker push glarimy/glarimy-converter:latest 
